# eigen-examples

./: CMakeLists.txt  coordinateTransform.cpp  eigenMatrix.cpp  exercise1.cpp  exercise2.cpp  plotTrajectory.cpp  useGeometry.cpp  visualizeGeometry.cpp
